# siconos-tutorials

./: .gitlab-ci.yml  ChangeLog  LICENSE  readme.md
examples/: CMakeLists.txt  CTestConfig.cmake  readme.md
examples/biology/StepSystem/: ComputeOneStep.py  SignSystem.cpp  StepSystem-explicit.py  StepSystem.cpp  StepSystemReduced.cpp  sign.1.6.ref  simu-reduced.1.6.ref
examples/cmake/: CXXCompilerSetup.cmake  SiconosRequiredVersion.cmake
examples/control/Observer/: LuenbergerObserver.cpp  SlidingReducedOrderObserver.cpp
examples/control/ObserverLCS/: ObserverLCS.cpp  SingleDSObserverLCS.cpp
examples/control/OptimalControl/: OptimalControl.cpp
examples/control/PID/: PID.cpp  PID.py
examples/control/Relay/: Filippov.cpp  Filippov.py  Filippov_NL.py  ParallelInverter.cpp  RBS-Controller.ref  RBS.ref  RelayBiSimulation.cpp  SimpleExampleRelay.cpp  SimpleExampleRelay.gp  SimpleExampleRelay.py  SimpleExampleRelay.ref  SimpleExampleRelay_py.ref  SimpleExampleRelay_with_plugin.py  Twisting.cpp
examples/control/RelayOscillator/: RelayOscillator.cpp  RelayOscillator.py  RelayOscillatorWithChattering.cpp  RelayOscillatorWithSliding.cpp  RelayOscillatorWithSliding.ref
examples/control/SMC/: SMCElectroPneumatic.cpp  SMCElectroPneumaticItw.cpp  SMCExampleExplicit.cpp  SMCExampleExplicit.py  SMCExampleImplicit.cpp  SMCExampleImplicit.py  SMCExampleImplicitOT2-noCplugin-sage.py  SMCExampleImplicitOT2-noCplugin.py  SMCExampleImplicitOT2.cpp  SMCExampleImplicitOT2.py
examples/control/SOSM/: SOSMCont.py
examples/control/TwoLinkManipulator/: TwoLinkManipulator.cpp  TwoLinkManipulator_Flexible.cpp  TwoLinkManipulator_MultiConstraints.cpp  TwoLinkManipulator_MultiConstraintsFlexible.cpp
examples/control/Zhuravlev/: Zhuravlev.py  ZhuravlevIvanovMCP.py  ZhuravlevIvanovMCPNumba.py  ZhuravlevIvanovMCP_C.py  ZhuravlevIvanovVI.py  ZhuravlevIvanovVI_C.py  ZhuravlevTwisting.py
examples/electronics/BuckConverter/: BuckConverter.cmake  BuckConverter.cpp
examples/electronics/Circuit-ThetaGammaSchemes/: CircuitRLCD-ThetaGammaSchemes.cpp  DiodeBridge-ThetaGammaSchemes.cpp  DiodeBridge-ThetaGammaSchemes.py  DiodeBridgeCapFilter-ThetaGammaSchemes.cpp  DiodeBridgeCapFilter-ThetaGammaSchemes.py
examples/electronics/CircuitRLCD/: CircuitRLCD.cpp  CircuitRLCD.py  README  Template-CircuitRLCD.tex
examples/electronics/ColpittsOscillator/: ColpittsOscillator.cpp
examples/electronics/DiodeBridge/: DiodeBridge.cpp  DiodeBridge.py  README  Template-DiodeBridge.tex
examples/electronics/DiodeBridgeCapFilter/: DiodeBridgeCapFilter.cpp
examples/electronics/DiodeBridgePowSup/: DB.ref  DiodeBridgePowSup.cpp
examples/electronics/IdealSwitch/: NonLinearSwitch.cpp
examples/electronics/PowerConverter/: PRC.cpp
examples/friction_contact_solvers/: FrictionalContact3D.cpp  FrictionalContact3D_SparseBlockStorage.cpp  GlobalFrictionalContact3D.cpp  GlobalFrictionalContact3D_SparseBlockStorage.cpp  test.c
examples/mechanics/2DRigidBodies/: Ball2D.cpp  Ball2D.ref  Ball2D_kernel_only.cpp  Ball2D_kernel_only.ref  Ball2D_kernel_only_with_friction.cpp  Ball2D_kernel_only_with_friction.ref  Ball_2d_with_kernel_only_with_friction.ref
examples/mechanics/BallOnMovingPlane/: BallLagrangianDSOnMovingPlane.cpp  BallNewtonEuler.cpp  BallNewtonEulerHarmonic.cpp  BallNewtonEulerOnMovingPlane.cpp  BallNewtonEulerOnMovingPlane.ref  BallOnMovingPlane.cpp  BallOnMovingPlane.ref
examples/mechanics/BouncingBall/: BouncingBallTS-CompliantContact.cpp  BouncingBallTS-CompliantContact.ref  BouncingBallTS-D1MinusLinearOSI.cpp  BouncingBallTS-Dynamic.cpp  BouncingBallTS-Dynamic.ref  BouncingBallTS-FremondNSL.cpp  BouncingBallTS-FremondNSL.gp  BouncingBallTS-LagrangianDS-Scleronomous.cpp  BouncingBallTS-MoreauJeanCombinedProjectionOSI.cpp  BouncingBallTS-MoreauJeanDirectProjectionOSI.cpp  BouncingBallTS-MoreauJeanDirectProjectionOSI.ref  BouncingBallTS-MoreauJeanGOSI.cpp  BouncingBallTS-MoreauJeanGOSI.ref  BouncingBallTS-SchatzmanPaoliOSI.cpp  BouncingBallTS-Scleronomous.cpp  BouncingBallTS-Scleronomous.ref  BouncingBallTS.cpp  BouncingBallTS.py  BouncingBallTS_with_plugin.py
examples/mechanics/BouncingBallEventDriven/: BouncingBallED-HEM5.cpp  BouncingBallED-TwoContacts.cpp  BouncingBallED-TwoContacts.ref  BouncingBallED-initialImpact.cpp  BouncingBallED-withRestingContact-LagrangianDS.cpp  BouncingBallED-withRestingContact.cpp  BouncingBallED.cpp  LinearOscillatorED.cpp  LinearOscillatorED.gp  LinearOscillatorED.ref
examples/mechanics/BulletBouncingBox/: BulletBouncingBox.cpp  BulletBouncingBox.py  BulletBouncingBoxDynamic.cpp  BulletBouncingBoxDynamic.py
examples/mechanics/CamFollower/: CF.ref  CamFollower-Rheonomous.cpp  CamFollower-Rheonomous.ref  CamFollower.cpp
examples/mechanics/ChainOfBalls/: MonodisperseChainOfBalls-LZBModel.cpp  TaperedChainOfBalls-LZBModel.cpp
examples/mechanics/ColumnOfBeads/: BeadColumnED_LZBModel.cpp  BeadColumnED_LZBModel.ref  BeadColumnED_NewtonLaw.cpp  ColumnOfBeadsTS-CombinedProjection.cpp  ColumnOfBeadsTS-MoreauJEanGOSI.cpp  ColumnOfBeadsTS-MoreauJEanGOSI.ref  ColumnOfBeadsTS-ProjectOnConstraints.cpp  ColumnOfBeadsTS-SBM.cpp  ColumnOfBeadsTS-SBM.ref  ColumnOfBeadsTS.cpp  ColumnOfBeadsTS.ref  ColumnOfbeadsTS-ProjectionOnConstraints-level0.ref  ColumnOfbeadsTS-ProjectionOnConstraints.ref
examples/mechanics/DirectProjection/: cube_directproj.py  doublePendulum_directproj.py  n_cubes_directproj.py
examples/mechanics/FourBarLinkageWith3clearance/: FourBarClearance.cpp  FourBarClearance.ref
examples/mechanics/FrictionOscillator/: FrictionOscillator.cpp  FrictionOscillator.gp  FrictionOscillator.py  FrictionOscillator.ref  FrictionOscillator.sh  TwoDofsFrictionOscillator.py
examples/mechanics/GeometricPrimitives/: 2d_primitives.py  box_stacks-MoreauJeanGOSI-withfcliboutput.py  box_stacks.py  capsule.py  cone.py  convexhull.py  convexhull2d_on_box.py  cube.py  cube_simulation.py  cylinder.py  delayed_cubes.py  deleted_cubes.py  disk_on_box.py  disk_on_disk.py  four_cubes_2Box_2ConvexShapes.py  heightmap.py  mesh.py  multicylinder.py  primitive_soup_first_run.py  reused_cube.py  (+7 more)
(+453 files in other folders)
