project(drumboiler-doublemixture CXX C)
cmake_minimum_required(VERSION 3.7)
set(CMAKE_BUILD_TYPE Release)
set(CMAKE_SKIP_BUILD_RPATH  FALSE)
set(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE)
set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
set(siconos_DIR /scratch/arocca/.local/lib/cmake/siconos-4.4.0)
find_package(siconos 4.4.0 CONFIG REQUIRED)
set(CMAKE_MODULE_PATH ${siconos_ROOT}/lib/cmake/siconos-4.4.0)
if(ON)
set(Boost_NO_BOOST_CMAKE 1)
find_package(Boost 1.61 COMPONENTS )
endif()
add_executable(drumboiler-doublemixture /scratch/arocca/non-smooth-dae/Jupyter-Python/Siconos-examples/DrumBoiler/DrumBoiler-07-2020/Original-file/drumboiler-doublemixture.cpp)
target_include_directories(drumboiler-doublemixture PUBLIC /scratch/arocca/non-smooth-dae/Jupyter-Python/Siconos-examples/DrumBoiler/DrumBoiler-07-2020/Original-file)
target_link_libraries(drumboiler-doublemixture PRIVATE Siconos::externals)
target_link_libraries(drumboiler-doublemixture PRIVATE Siconos::numerics)
target_link_libraries(drumboiler-doublemixture PRIVATE Siconos::kernel)
target_link_libraries(drumboiler-doublemixture PRIVATE Siconos::control)
target_link_libraries(drumboiler-doublemixture PRIVATE Siconos::mechanics)
target_link_libraries(drumboiler-doublemixture PRIVATE Siconos::io)
install(TARGETS drumboiler-doublemixture DESTINATION /scratch/arocca/non-smooth-dae/Jupyter-Python/Siconos-examples/DrumBoiler/DrumBoiler-07-2020/Original-file)
